fix: Disable scheduled Figma sync to prevent daily failures
- Commented out daily cron schedule
- Figma API integration not yet configured
- Manual workflow_dispatch still available

--- a/.github/workflows/figma-sync.yml
+++ b/.github/workflows/figma-sync.yml
@@ -13,9 +13,9 @@ on:
         required: false
         default: '7YaZcmb7hUIj0nqV1o0T2E'
   
-  # 매일 오전 9시에 자동 실행 (선택사항)
-  schedule:
-    - cron: '0 9 * * *'
+  # 매일 오전 9시에 자동 실행 (선택사항) - 현재 비활성화
+  # schedule:
+  #   - cron: '0 9 * * *'
 
 jobs:
   figma-sync:
