--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_6b1d9b9fdbdfa15"
+    "chromatic": "npx chromatic --project-token=chpt_6b1d9b9fdbdfa15",
+    "tokens:sync": "node scripts/sync-figma-tokens.js",
+    "tokens:build": "style-dictionary build",
+    "deploy": "gh-pages -d storybook-static",
+    "deploy-storybook": "npm run build-storybook && gh-pages -d storybook-static"
   },
   "author": "",
   "license": "ISC",
@@ -22,11 +26,13 @@
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "chromatic": "^13.1.4",
+    "dotenv": "^17.2.2",
     "playwright": "^1.55.0",
     "prop-types": "^15.8.1",
     "storybook": "^9.1.5",
     "storybook-addon-designs": "^6.3.1",
     "storybook-design-token": "^4.1.0",
+    "style-dictionary": "^5.0.4",
     "vitest": "^3.2.4"
   }
 }
