--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "chromatic": "npx chromatic --project-token=chpt_6b1d9b9fdbdfa15",
+    "tokens:test": "node scripts/test-figma-connection.js",
     "tokens:sync": "node scripts/sync-figma-tokens.js",
     "tokens:build": "style-dictionary build",
+    "tokens:figma": "figma-tokens",
+    "generate": "plop",
+    "generate:component": "plop component",
+    "generate:token": "plop token",
     "deploy": "gh-pages -d storybook-static",
     "deploy-storybook": "npm run build-storybook && gh-pages -d storybook-static"
   },
@@ -17,19 +22,21 @@
   "license": "ISC",
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
-    "@storybook/addon-a11y": "^9.1.5",
-    "@storybook/addon-actions": "^9.0.8",
+    "@storybook/addon-a11y": "^9.1.7",
     "@storybook/addon-designs": "^10.0.2",
-    "@storybook/addon-docs": "^9.1.5",
-    "@storybook/addon-vitest": "^9.1.5",
-    "@storybook/react-vite": "^9.1.5",
+    "@storybook/addon-docs": "^9.1.7",
+    "@storybook/addon-vitest": "^9.1.7",
+    "@storybook/react-vite": "^9.1.7",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "chromatic": "^13.1.4",
     "dotenv": "^17.2.2",
+    "figma-tokens": "^0.0.8",
+    "gh-pages": "^6.3.0",
     "playwright": "^1.55.0",
+    "plop": "^4.0.2",
     "prop-types": "^15.8.1",
-    "storybook": "^9.1.5",
+    "storybook": "^9.1.7",
     "storybook-addon-designs": "^6.3.1",
     "storybook-design-token": "^4.1.0",
     "style-dictionary": "^5.0.4",
